--- a/templates/result.html
+++ b/templates/result.html
@@ -39,7 +39,7 @@
                         {% endfor %}
                     </ul>
                 {% else %}
-                    <p class="text-sm text-green-700">ไม่มีข้อมูลจุดแข็งที่ถูกวิเคราะห์</p>
+                    <p class="text-sm text-red-700">ERROR: ไม่สามารถแสดงผลข้อมูลได้</p>
                 {% endif %}
             </div>
         </div>
@@ -54,7 +54,7 @@
                         {% endfor %}
                     </ul>
                 {% else %}
-                    <p class="text-sm text-yellow-700">ไม่มีข้อเสนอแนะเพิ่มเติม</p>
+                    <p class="text-sm text-red-700">ERROR: ไม่สามารถแสดงผลข้อมูลได้</p>
                 {% endif %}
             </div>
         </div>
