--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
             <form action="/uploadfile/" method="post" enctype="multipart/form-data" id="upload-form">
                 <div class="mb-4">
                     <label for="audio-upload" class="block text-gray-700 text-sm font-semibold mb-2">กรุณาอัพโหลดไฟล์เสียง</label>
-                    <input type="file" name="file" id="audio-upload" accept=".mp3,.wav,.ogg" class="block w-full text-sm text-gray-500 hover:duration-300
+                    <input type="file" name="file" id="audio-upload" accept=".mp4" class="block w-full text-sm text-gray-500 hover:duration-300
                     file:mr-4 file:py-2 file:px-4
                     file:rounded-full file:border-0
                     file:text-sm file:font-semibold
